# adit-radis-shared

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  TEST_STRATEGY.md  TODO.md  cli.py  conftest.py  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.watch.yml  docker-compose.yml  example.env  manage.py  package-lock.json  package.json  pyproject.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: renovate.json
.github/workflows/: ci.yml
accounts/: factories.py  views.py
adit_radis_shared/: cli_commands.py  cli_helpers.py  conftest.py  default_scripts.py  invoke_tasks.py  pytest_fixtures.py  script_helper.py  telemetry.py
adit_radis_shared/accounts/: admin.py  apps.py  backends.py  factories.py  forms.py  middlewares.py  models.py  urls.py  views.py
adit_radis_shared/accounts/migrations/: 0010_alter_user_active_group.py  0011_alter_user_department_alter_user_phone_number.py
adit_radis_shared/accounts/templates/accounts/: profile.html
adit_radis_shared/accounts/tests/: test_migrations.py  test_views.py
adit_radis_shared/accounts/tests/acceptance/: conftest.py  test_login.py
adit_radis_shared/accounts/tests/integration/: test_login.py
adit_radis_shared/cli/: commands.py  helper.py  parsers.py  setup.py
adit_radis_shared/commands/: backup_db.py  compose_down.py  compose_up.py  format_code.py  generate_auth_token.py  generate_certificate_chain.py  generate_certificate_files.py  generate_django_secret_key.py  generate_secure_password.py  helper.py  init_workspace.py  lint.py  randomize_env_secrets.py  restore_db.py  shell.py  show_outdated.py  stack_deploy.py  stack_rm.py  test.py  try_github_actions.py  upgrade_postgres_volume.py
adit_radis_shared/common/: admin.py  apps.py  decorators.py  exceptions.py  factories.py  forms.py  middlewares.py  mixins.py  models.py  site.py  tasks.py  types.py  views.py
adit_radis_shared/common/management/base/: hard_reset_migrations.py  procrastinate_worker.py  server_command.py
adit_radis_shared/common/management/commands/: bg_worker.py  create_admin.py  create_example_groups.py  create_example_users.py  create_superuser.py  example_async_server.py  example_server.py  generate_cert.py  hard_reset_migrations.py  ok_server.py  populate_users_and_groups.py  retry_stalled_jobs.py  send_test_mail.py  worker.py
adit_radis_shared/common/migrations/: 0001_initial.py  0002_update_or_create_site.py  0003_projectsettings_delete_siteprofile.py  0003_remove_unneeded_siteprofile_fields.py  0003_rename_siteprofile_projectsettings.py  0004_remove_projectsettings_meta_description_and_more.py  0004_rename_siteprofile_projectsettings.py  0004_siteprofile.py  0005_delete_siteprofile.py
adit_radis_shared/common/static/common/: common.css
adit_radis_shared/common/templates/common/: _bootstrap_icon.html  _django_tables2.html  _footer.html  _navbar.html  _navbar_actions.html  _navbar_links.html  _navbar_user_manager.html  _pagination.html  broadcast.html  common_layout.html  maintenance.html  section_locked.html
adit_radis_shared/common/templates/cotton/: heading.html  page_heading.html  page_size_selector.html  pagination.html  table_heading.html
adit_radis_shared/common/templates/registration/: activate.html  activation_complete.html  activation_complete_admin_pending.html  activation_email.html  activation_email.txt  activation_email_subject.txt  admin_approve.html  admin_approve_complete.html  admin_approve_complete_email.html  admin_approve_complete_email.txt  admin_approve_complete_email_subject.txt  admin_approve_email.html  admin_approve_email.txt  admin_approve_email_subject.txt  login.html  logout.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_done.html  (+8 more)
adit_radis_shared/common/templatetags/: common_extras.py
adit_radis_shared/common/tests/: test_common_extras.py  test_forms.py  test_middlewares.py  test_mixins.py  test_tasks.py  test_utils.py  test_views.py
adit_radis_shared/common/utils/: async_utils.py  auth_utils.py  debounce.py  htmx_triggers.py  mail.py  migration_utils.py  testing.py  testing_helpers.py  worker_utils.py
adit_radis_shared/maintenance_commands/: apps.py  init_workspace.py
adit_radis_shared/tests/: test_telemetry.py
adit_radis_shared/token_authentication/: admin.py  api_urls.py  apps.py  auth.py  factories.py  forms.py  models.py  urls.py  views.py
adit_radis_shared/token_authentication/tests/: test_authentication.py  test_views.py
adit_radis_shared/token_authentication/utils/: crypto.py
common/: mixins.py  models.py  site.py  views.py
common/static/common/: common.js
compose/: docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml
docs/superpowers/plans/: 2026-05-06-dbbackup-adit-migration.md  2026-05-06-dbbackup-radis-migration.md  2026-05-06-dbbackup-shared-task.md
docs/superpowers/specs/: 2026-05-06-dbbackup-shared-design.md
example_project/: manage.py
example_project/example_project/: asgi.py  settings.py  urls.py  wsgi.py
example_project/example_project/example_app/: apps.py  factories.py  filters.py  forms.py  models.py  tables.py  tasks.py  urls.py  views.py
example_project/example_project/sandbox/: apps.py  views.py
example_project/example_project/settings/: base.py  development.py  production.py  test.py
example_project/templates/: home.html
notebooks/: requests_client.ipynb
scripts/: _common.py  backup_db.py  compose_down.py  compose_up.py  copy_statics.py  format_code.py  generate_auth_token.py  generate_certificate_chain.py  generate_certificate_files.py  generate_django_secret_key.py  generate_secure_password.py  init_workspace.py  lint.py  lint_code.py  randomize_env_secrets.py  restore_db.py  run_tests.py  shell.py  show_outdated.py  stack_deploy.py  stack_rm.py  test.py  try_github_actions.py  upgrade_postgres_volume.py  web_shell.py
token_authentication/: factories.py
token_authentication/tests/: conftest.py
(+46 files in other folders)
