[project]
name = "adit-radis-shared"
description = "Shared Django apps between ADIT and RADIS"
authors = [{ name = "Kai Schlamp" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["version"]
dependencies = [
    "channels",
    "crispy-bootstrap5",
    "cryptography",
    "daphne",
    "Django",
    "django-crispy-forms",
    "django-dbbackup",
    "django-extensions",
    "django-filter",
    "django-htmx",
    "django-loginas",
    "django-registration-redux",
    "django-revproxy",
    "django-tables2",
    "djangorestframework",
    "environs[django]",
    "procrastinate[django]",
    "psycopg[binary]",
    "Twisted[tls,http2]",
    "wait-for-it",
    "watchfiles",
    "whitenoise",
]

[dependency-groups]
dev = [
    "debugpy",
    "django-browser-reload",
    "django-debug-permissions",
    "django-debug-toolbar",
    "django-stubs",
    "django-test-migrations",
    "djangorestframework-stubs",
    "djlint",
    "factory-boy<=3.3.2",
    "Faker",
    "ipykernel",
    "ipython",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "pytest-only",
    "pytest-order",
    "pytest-picked",
    "pytest-playwright",
    "pytest-timeout",
    "pytest-watch",
    "python-dotenv",
    "pywatchman",
    "requests",
    "ruff",
    "time-machine",
    "typer",
    "vermin",
]

[tool.pyright]
ignore = ["**/migrations", "**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.settings.development"
pythonpath = ["example_project"]
testpaths = ["adit_radis_shared/**/tests", "example_project/**/tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
log_cli = 0
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["acceptance: mark a test as an acceptance test."]
filterwarnings = [
    # We already fixed this, so we only need to remove this ignore with next major version of factory boy
    "ignore:.*Factory._after_postgeneration will stop saving the instance:DeprecationWarning",
    "ignore:'cgi' is deprecated:DeprecationWarning",
    'ignore:.*use of fork\(\) may lead to deadlocks.*:DeprecationWarning',
    'ignore:.*Use timezone-aware objects to represent datetimes in UTC.*:DeprecationWarning',
]
timeout = 60

[tool.coverage.run]
branch = true
source = ["adit_radis_shared"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py312"
exclude = ["migrations"]
line-length = 100
lint.select = ["E", "F", "I", "DJ"]

[tool.djlint]
profile = "django"
max_line_length = 120
ignore = "H021,H030,H031,T002"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
